Fixed header on mobile and tablet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@ h3 {
     color: #fff;
     font-family: 'Heebo', sans-serif;
     font-weight: 800;
+    font-size: 33px;
     text-transform: uppercase;
 }
 
@@ -17,21 +18,22 @@ h3 {
     background-color:#202225;
     border-bottom: solid 1px #B2B2B2;
     width: 100%;
-    margin-top: 10px;
-    margin-bottom: 20px;
+    padding-top: 15px;
 }
 
 .score {
-    padding-left: 8px;
+    padding-left: 2px;
     color: #28CDFF;
 }
 
-.high-score{
+.high-score {
     text-align: right;
+    padding-bottom: 10px;
 }
 
 .logo {
-    vertical-align: auto;
+    padding-bottom: 10px;
+    vertical-align: middle;  
 }
 
 .position {
@@ -40,3 +42,14 @@ h3 {
 }
 
 /* ------------------------------- Header styling */
+
+
+/* ------------------------------- Media Queries */
+
+@media (max-width: 414px) {
+    .high-score {
+        text-align: center;
+        padding-top: 20px;
+    }
+
+}
